--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-Flask==3.0.0
-pandas==2.0.0
-numpy==1.24.3
-requests==2.31.0
-groq==0.33.0
-python-dotenv==1.0.0
-plotly==5.15.0
+Flask
+pandas
+numpy
+requests
+groq
+python-dotenv
+plotly
